crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_spoke_connect_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_spoke_connect_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_spoke_connect_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_spoke_connect_rust_future_cancel_void(uint64_t handle
);
void ffi_spoke_connect_rust_future_free_void(uint64_t handle
);
void ffi_spoke_connect_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_spoke_connect_checksum_func_check_response_correlation(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_derive_peer_id_from_ed25519_pubkey(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_dispatch_allowed(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_is_allowlisted(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_protocol_version(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_required_capability(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_sign_hello_ed25519(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_verify_hello_ed25519(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_connect_responder_ffi(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_loopback_transport_pair(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_new_multi_peer_router_ffi(void
    
);
uint16_t uniffi_spoke_connect_checksum_func_connect_remote_adapter_ffi(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_inboundsequence_advance(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_noncestore_check_and_record(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_outboundsequence_allocate(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_close(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_invoke_tool(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_register_tool_handler(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_remote_manifest(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_remote_peer_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_session_id(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_connectresponderffi_state(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransport_close(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransport_recv(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransport_send(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransportpair_client(void
    
);
uint16_t uniffi_spoke_connect_checksum_method_loopbacktransportpair_server(void
    
);