crates/spoke-connect/bindings/csharp/generated/spoke_connect.cs


    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_spoke_connect_rust_future_free_rust_buffer(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer ffi_spoke_connect_rust_future_complete_rust_buffer(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_spoke_connect_rust_future_poll_void(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_spoke_connect_rust_future_cancel_void(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_spoke_connect_rust_future_free_void(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_spoke_connect_rust_future_complete_void(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_check_response_correlation(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_derive_peer_id_from_ed25519_pubkey(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_dispatch_allowed(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_is_allowlisted(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_protocol_version(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_required_capability(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_sign_hello_ed25519(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_verify_hello_ed25519(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_connect_responder_ffi(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_loopback_transport_pair(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_new_multi_peer_router_ffi(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_func_connect_remote_adapter_ffi(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_inboundsequence_advance(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_noncestore_check_and_record(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_outboundsequence_allocate(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_close(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_invoke_tool(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_register_tool_handler(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_remote_manifest(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_remote_peer_id(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_session_id(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_connectresponderffi_state(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_loopbacktransport_close(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_loopbacktransport_recv(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_loopbacktransport_send(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_loopbacktransportpair_client(
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ushort uniffi_spoke_connect_checksum_method_loopbacktransportpair_server(
    );
